// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input name=address maxlength=200>
<input name='address' maxlength='200'>
<input name="address" maxlength="200">
<div class="foo"></div>
<div   class="foo"   ></div>
<div class="foo bar"></div>
<div class="foo bar" id="header"></div>
<div   class="foo bar"   id="header"   ></div>
<div data-prettier></div>
<div data-prettier="true"></div>
<meta property="og:description" content="The Mozilla Developer Network (MDN) provides
information about Open Web technologies including HTML, CSS, and APIs for both Web sites
and HTML5 Apps. It also documents Mozilla products, like Firefox OS.">
<div attribute>String</div>
<div attribute="">String</div>
<div attribute=''>String</div>
<div attribute >String</div>
<div attribute = "" >String</div>
<div attribute = '' >String</div>
<div  attribute  >String</div>
<div  attribute  =  ""  >String</div>
<div  attribute  =  ''  >String</div>
<div attribute="attribute = attribute"></div>
<div ATTRIBUTE>String</div>
<div ATTRIBUTE="">String</div>
<div ATTRIBUTE=''>String</div>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars">
</article>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars">...</article>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars">
  ...
</article>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars">

</article>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars">



</article>
<X>
</X>
<X a="1">
</X>
<X a="1" b="2">
</X>
<X a="1" b="2" c="3">
</X>
<p 
  class="
    foo
    bar
    baz
  "
>
</p>

=====================================output=====================================
<input name="address" maxlength="200" />
<input name="address" maxlength="200" />
<input name="address" maxlength="200" />
<div class="foo"></div>
<div class="foo"></div>
<div class="foo bar"></div>
<div class="foo bar" id="header"></div>
<div class="foo bar" id="header"></div>
<div data-prettier></div>
<div data-prettier="true"></div>
<meta
  property="og:description"
  content="The Mozilla Developer Network (MDN) provides
information about Open Web technologies including HTML, CSS, and APIs for both Web sites
and HTML5 Apps. It also documents Mozilla products, like Firefox OS."
/>
<div attribute>String</div>
<div attribute="">String</div>
<div attribute="">String</div>
<div attribute>String</div>
<div attribute="">String</div>
<div attribute="">String</div>
<div attribute>String</div>
<div attribute="">String</div>
<div attribute="">String</div>
<div attribute="attribute = attribute"></div>
<div ATTRIBUTE>String</div>
<div ATTRIBUTE="">String</div>
<div ATTRIBUTE="">String</div>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars"
></article>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars"
>
  ...
</article>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars"
>
  ...
</article>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars"
></article>
<article
  id="electriccars"
  data-columns="3"
  data-index-number="12314"
  data-parent="cars"
></article>
<X> </X>
<X a="1"> </X>
<X a="1" b="2"> </X>
<X a="1" b="2" c="3"> </X>
<p
  class="
    foo
    bar
    baz
  "
></p>

================================================================================
`;

exports[`boolean.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<button type="submit">This is valid.</button>
<button type="submit" disabled>This is valid.</button>
<button type="submit" disabled="">This is valid.</button>
<button type="submit" disabled="disabled">This is valid.</button>
<button type="submit" disabled=true>This is valid. This will be disabled.</button>
<button type="submit" disabled='true'>This is valid. This will be disabled.</button>
<button type="submit" disabled="true">This is valid. This will be disabled.</button>
<button type="submit" disabled=false>This is valid. This will be disabled.</button>
<button type="submit" disabled="false">This is valid. This will be disabled.</button>
<button type="submit" disabled='false'>This is valid. This will be disabled.</button>
<button type="submit" disabled=hahah>This is valid. This will be disabled.</button>
<button type="submit" disabled='hahah'>This is valid. This will be disabled.</button>
<button type="submit" disabled="hahah">This is valid. This will be disabled.</button>
<input type="checkbox" checked disabled name="cheese">
<input type="checkbox" checked="checked" disabled="disabled" name="cheese">
<input type='checkbox' checked="" disabled="" name=cheese >
<div lang=""></div>

=====================================output=====================================
<button type="submit">This is valid.</button>
<button type="submit" disabled>This is valid.</button>
<button type="submit" disabled="">This is valid.</button>
<button type="submit" disabled="disabled">This is valid.</button>
<button type="submit" disabled="true">
  This is valid. This will be disabled.
</button>
<button type="submit" disabled="true">
  This is valid. This will be disabled.
</button>
<button type="submit" disabled="true">
  This is valid. This will be disabled.
</button>
<button type="submit" disabled="false">
  This is valid. This will be disabled.
</button>
<button type="submit" disabled="false">
  This is valid. This will be disabled.
</button>
<button type="submit" disabled="false">
  This is valid. This will be disabled.
</button>
<button type="submit" disabled="hahah">
  This is valid. This will be disabled.
</button>
<button type="submit" disabled="hahah">
  This is valid. This will be disabled.
</button>
<button type="submit" disabled="hahah">
  This is valid. This will be disabled.
</button>
<input type="checkbox" checked disabled name="cheese" />
<input type="checkbox" checked="checked" disabled="disabled" name="cheese" />
<input type="checkbox" checked="" disabled="" name="cheese" />
<div lang=""></div>

================================================================================
`;

exports[`case-sensitive.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div CaseSensitive></div>

=====================================output=====================================
<div CaseSensitive></div>

================================================================================
`;

exports[`dobule-quotes.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img src="test.png" alt="John 'ShotGun' Nelson">

=====================================output=====================================
<img src="test.png" alt="John 'ShotGun' Nelson" />

================================================================================
`;

exports[`duplicate.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<a href="1" href="2">123</a>

=====================================output=====================================
<a href="1" href="2">123</a>

================================================================================
`;

exports[`single-quotes.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img src="test.png" alt='John "ShotGun" Nelson'>

=====================================output=====================================
<img src="test.png" alt='John "ShotGun" Nelson' />

================================================================================
`;

exports[`smart-quotes.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div 
    smart-quotes='123 " 456'
    smart-quotes="123 ' 456"
    smart-quotes='123 &apos;&quot; 456'
></div>

=====================================output=====================================
<div
  smart-quotes='123 " 456'
  smart-quotes="123 ' 456"
  smart-quotes="123 '&quot; 456"
></div>

================================================================================
`;

exports[`srcset.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<img src="/assets/visual.png" 
srcset="/assets/visual@0.5.png  400w, /assets/visual.png      805w" 
sizes="(max-width: 66rem) 100vw, 66rem" alt=""/>
<img src="/assets/visual.png" 
srcset="/assets/visual@0.5.png  400w, /assets/visual.png      805w,	/assets/visual@2x.png   1610w,	/assets/visual@3x.png   2415w" 
sizes="(max-width: 66rem) 100vw, 66rem" alt=""/>
<img src="/assets/visual.png" 
srcset="/assets/visual@0.5.png  0.5x, /assets/visual.png      1111x,	/assets/visual@2x.png   2x,	/assets/visual@3x.png   3.3333x" 
sizes="(max-width: 66rem) 100vw, 66rem" alt=""/>
<img

srcset="
             /media/examples/surfer-240-200.jpg
">

=====================================output=====================================
<img
  src="/assets/visual.png"
  srcset="/assets/visual@0.5.png 400w, /assets/visual.png 805w"
  sizes="(max-width: 66rem) 100vw, 66rem"
  alt=""
/>
<img
  src="/assets/visual.png"
  srcset="
    /assets/visual@0.5.png  400w,
    /assets/visual.png      805w,
    /assets/visual@2x.png  1610w,
    /assets/visual@3x.png  2415w
  "
  sizes="(max-width: 66rem) 100vw, 66rem"
  alt=""
/>
<img
  src="/assets/visual.png"
  srcset="
    /assets/visual@0.5.png    0.5x,
    /assets/visual.png     1111x,
    /assets/visual@2x.png     2x,
    /assets/visual@3x.png     3.3333x
  "
  sizes="(max-width: 66rem) 100vw, 66rem"
  alt=""
/>
<img srcset="/media/examples/surfer-240-200.jpg" />

================================================================================
`;

exports[`without-quotes.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p title=Title>String</p>

=====================================output=====================================
<p title="Title">String</p>

================================================================================
`;
